added all mongodb setup

--- a/HASH.ProductsList/client/index.html
+++ b/HASH.ProductsList/client/index.html
@@ -13,7 +13,7 @@
     
     <div class="text-center">
         <button onclick="productController.getCalculatedProductDiscount();" class="btn btn-primary text-center" type="button">
-            Calcular Descontos
+            Calculate Discounts
         </button>
     </div> 
     <br>
@@ -27,6 +27,7 @@
     <script src="js/app/views/View.js"></script>
     <script src="js/app/views/ProductsView.js"></script>
     <script src="js/app/views/MessageView.js"></script>
+    <script src="js/app/models/Message.js"></script>
     <script src="js/app/services/HttpService.js"></script>
     <script src="js/app/services/ProductsService.js"></script>
     <script src="js/app/controllers/ProductController.js"></script>
